# webserv

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checker.yml  cpplint.yml  document-format.yml  googletest.yml  stress_test.yml  valgrind.yml
docker/nginx/: .env  docker-compose.yml
docker/siege/: Dockerfile  docker-compose.yml
docker/webserv/: Dockerfile
docs/class/: all.md  cgi_class.md  config_class.md  config_parser_class.md  exception_class.md  http_class.md  socket_class.md  transaction_class.md
docs/spec/: cgi.md  config-test.md  config.md  http.md
docs/test/: integration_test.md
for_review/: command  default.conf
includes/: sample.hpp
sample_data/cgi-bin/: cgi-req-dumper.py  cgi-req-dumper.sh  cgi_error_exit.py  cgi_test.py  hello_cgi.py  post_cgi.py
sample_data/html/: for_review.html  index.html
srcs/Config/: ConfigGenerator.cpp  ConfigGenerator.hpp  ConfigLexer.cpp  ConfigLexer.hpp  ConfigParser.cpp  ConfigParser.hpp  ConfigProcesser.cpp  ConfigProcesser.hpp  DefaultValues.cpp  DefaultValues.hpp  InitialValues.cpp  InitialValues.hpp  LocationContext.cpp  LocationContext.hpp  Node.cpp  Node.hpp  ServerContext.cpp  ServerContext.hpp  Token.cpp  Token.hpp  WebservConfig.cpp  WebservConfig.hpp
srcs/Http/: HTTPReasonPhrase.cpp  HTTPReasonPhrase.hpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  Request.cpp  Request.hpp  RequestFacade.cpp  RequestFacade.hpp  Response.cpp  Response.hpp  ResponseBuilder.cpp  ResponseBuilder.hpp
srcs/Socket/: Socket.cpp  (+3 more)
tests/: CMakeLists.txt
tests/integration_test/: error.sh  integration_test.sh  ok.sh
tests/stress_test/: stress_test.sh
tests/test_data/public/cgi-bin/: file_manager.py
tests/unit_test/: CGI.cpp  CMakeLists.txt  ConfigParser.cpp  CreateServerLocation.cpp  HTTP.cpp  Node.cpp  ServerLocation.cpp  ServerLocationFacade.cpp  Socket.cpp  Transaction.cpp  utils.cpp
tests/valgrind/: log_check.sh  valgrind.sh
tools/: submit.sh
(+241 files in other folders)
